<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    tools:context=".RecordFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/txt_title"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="casual"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/txt_lbl_Amount"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/lbl_Amount"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_amt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/txt_lbl_Paidto"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/lbl_Paidto"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_Paidto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:inputType="textAutoComplete" />

    <TextView
        android:id="@+id/txt_lbl_whendt"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/lbl_whendt"
        android:textSize="18sp"
        android:textStyle="bold" />
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/edit_whendt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="sans-serif-black"
            android:inputType="datetime"
            android:focusable="false"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/"
            />
        <EditText
            android:id="@+id/edit_whentime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="sans-serif-black"
            android:inputType="datetime"
            android:focusable="false"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/btn_lbl_save" />


</androidx.appcompat.widget.LinearLayoutCompat>